# neuro-py-double-net

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
neuro_py_double_net/: neurodouble.py
tests/: test_sample.py
