[tool.poetry]
name = "neuro-py-double-net"
version = "0.1.0"
description = ""
authors = ["Pierre Filliolaud <pierre.filliolaud@ormex.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
keras = "^3.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
